AG-3606 - fixed sidebar overflow bug

--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_sidebar.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_sidebar.scss
@@ -14,6 +14,7 @@
         width: ag-param(icon-size) + 4;
         position: relative;
         color: ag-param(foreground-color);
+        overflow: hidden;
     }
 
     .ag-side-button-button {
